--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-media-server": "^4.0.12"
+    "node-media-server": "4.0.12",
+    "express": "5.1.0"
   }
 }
